<resources>
    <string name="app_name">Meeting Sample</string>
    <string name="network_error">Network Error</string>
    <string name="internal_server_error">Internal Server Error</string>
    <string name="no_network_error">Please connect to working internet connection</string>
    <string name="text_okay">OK</string>
    <string name="text_cancel">Cancel</string>
    <string name="prev">PREV</string>
    <string name="meeting_data">meeting data</string>
    <string name="next">NEXT</string>
    <string name="dummy_time">11am-12pm</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="description">Description</string>
    <string name="schedule_company_meeting">Schedule Company Meeting</string>
    <string name="meeting_previous_date_msg">Meeting time must be in future time</string>
    <string name="no_meeting">No meeting scheduled</string>
    <string name="end_time_must_be_greater">End time must be greater than start time</string>
    <string name="already_booked_slot">Meeting is already scheduled in this slot</string>
    <string name="date_time_cant_be_blank">Please select date and time</string>
    <string name="meeting_scheduled_successs">Meeting scheduled successfully</string>
    <string name="back">BACK</string>
    <string name="scedule_title">SCHEDULE A MEETING</string>
    <string name="submit_title">Submit</string>

</resources>
